# RAGvix

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
notebooks/: 00_scratch.ipynb
scripts/: build_index.py  ingest_sample.py  query.py
src/ragvix/: __init__.py  config.py
src/ragvix/eval/: retrieval_eval.py
src/ragvix/index/: __init__.py  chunker.py  faiss_store.py
src/ragvix/ingest/: __init__.py  arxiv_client.py
src/ragvix/parsing/: __init__.py  pdf_to_text.py
src/ragvix/rag/: __init__.py  pipeline.py
src/ragvix/retriever/: __init__.py  retriever.py
src/ragvix/utils/: __init__.py  io.py  logging.py
